
[project]
name = "RoughPy"
version = "0.0.1"
author = "The RoughPy Authors"
author_email = "info@datasig.ac.uk"
license = {file = "LICENSE.txt" }
keywords = [
    "data",
    "streams",
    "rough paths",
    "signatures"
]

include_package_data = true
packages = ["roughpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Mathematics",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: C++",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS"
]

[build-system]
requires = [
    "scikit-build-core",
    "ninja; platform_system!='Windows'",
    "oldest-supported-numpy",
    "mkl-devel",
    "mkl-static"
]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
wheel.packages = []
cmake.build-type = "Release"

[tool.scikit-build.cmake.define]
ROUGHPY_BUILD_TESTS = "OFF"

[tool.cibuildwheel]
skip = [
    "*win32",
    "*-musl*",
    "pp*",
    "*linux_i686",
    "*arm64",
    "*universal2",
    "cp3{6,7}-*"
]
build-verbosity=1

test-requires = ["pytest", "numpy"]
test-command = ["pytest --capture=no {project}/tests"]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
repair-wheel-command = "delvewheel show {wheel} --ignore-in-wheel & delvewheel repair -w {dest_dir} --ignore-in-wheel {wheel}"

[tool.cibuildwheel.linux]
before-all = [
    "yum install -y curl zip unzip tar",
    "git clone https://github.com/Microsoft/vcpkg.git",
    "vcpkg/bootstrap-vcpkg.sh",
    "pip install hatch"
    ]

repair-wheel-command = "auditwheel show {wheel} && auditwheel repair -w {dest_dir} {wheel}"

[tool.cibuildwheel.linux.environment]
SKBUILD_CMAKE_ARGS = "--toolchain=vcpkg/scripts/buildsystems/vcpkg.cmake"
